--- a/package.json
+++ b/package.json
@@ -22,19 +22,21 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor/android": "6.0.0",
+    "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.0",
     "@capacitor/camera": "^6.0.1",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/core": "^6.1.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@firebase/storage": "^0.12.6",
     "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
     "firebase": "^10.12.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webpack": "^5.94.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -42,9 +44,9 @@
     "@angular-eslint/builder": "^17.0.0",
     "@angular-eslint/eslint-plugin": "^17.0.0",
     "@angular-eslint/eslint-plugin-template": "^17.0.0",
-    "@angular-eslint/schematics": "^17.0.0",
+    "@angular-eslint/schematics": "^18.3.0",
     "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/cli": "^17.0.0",
+    "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "6.0.0",
